Fixing some styles 😏
* Print Record
* Show Record
* Switch the nameSubject in the Show Schedule

--- a/General_Files/mpdf/resources/record.css
+++ b/General_Files/mpdf/resources/record.css
@@ -82,3 +82,12 @@ table td p .title{
     margin: 0px;
     color: #fff;
 }
+
+.infoTable{
+	/*background: red;*/
+}
+
+.infoTable td.photoCell{
+	/*background: blue;*/
+	width: 50%;
+}
