--- a/app/users/files/css/view_style.css
+++ b/app/users/files/css/view_style.css
@@ -211,3 +211,60 @@ ul.side-nav.fixed:hover{
 .tap-target .tap-target-content p, .tap-target .tap-target-content h5{
     color: white;
 }
+
+.grade-wrapper{
+	padding-top: 5%; 
+	width: 100%;
+	margin: auto;
+}
+
+.grade-wrapper:last-child{
+	padding-bottom: 10%;
+}
+
+.grade-wrapper .grade-header{
+	padding: 10px;
+	display: flex;
+	justify-content: space-around;
+	font-weight: bold;
+	font-size: 1em;
+}
+
+.grade-wrapper .grade-header div span{
+	font-weight: normal;
+}
+
+.grade-wrapper table th{
+	/*color: #fff;*/
+	border: 1px solid #1976D2;
+}
+
+.grade-wrapper table td{
+	border: 1px solid #1976D2;
+	font-size: 1em;
+}
+
+.grade-wrapper .grade-footer{
+	display: flex;
+	justify-content: space-between;
+	font-size: 1.3em;
+}
+
+.grade-wrapper .grade-footer .indicator{
+	color: #fff;
+	padding: 5px;
+	text-align: center;
+	width: 75%;
+}
+
+.grade-wrapper .grade-footer .grade{
+	width: 25%;
+	padding: 5px;
+	text-align: center;
+}
+
+@media only screen and (max-width: 768px){
+	.grade-wrapper .grade-header{
+		flex-direction: column;
+	}
+}
