--- a/app/users/files/css/c/style.css
+++ b/app/users/files/css/c/style.css
@@ -456,10 +456,6 @@ a.showTeacher{
     cursor: pointer;
 }
 
-body{
-    /*background: red;*/
-}
-
 .chart-container{
     margin: auto;
     margin-top: 10vh;
@@ -471,11 +467,12 @@ body{
 
 .chart-cont-cont{
     padding-left: 300px;
+    display: none;
 }
 
 .card-image img{
     widows: 100%;
-    height: 40vh;
+    height: 50vh;
 }
 
 @media only screen and (max-width: 768px){
@@ -695,7 +692,7 @@ body{
     .chart-container{
         /*background: green;*/
         height: 40vh;
-        width: 90vw;
+        width: 100vw;
     }
 }
 
