--- a/app/users/files/css/c/style.css
+++ b/app/users/files/css/c/style.css
@@ -2,9 +2,6 @@
     border-left-color: #000;
 }
 
-main{
-    /*background: red;*/
-}
 
 .table-of-contents.c a:hover {
     border-left-color: #7f8c8d;
@@ -156,14 +153,6 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
     cursor: pointer;
 }
 
-table.schedule td{
-    /*padding: 0;*/
-}
-
-table.schedule .select-wrapper .caret{
-    /*display: none;*/
-}
-
 table.schedule .select-wrapper input.select-dropdown{
     border-bottom: none;
     text-align: center;
@@ -212,9 +201,6 @@ p.title{
     background: #ebebeb;
 }
 
-ul#options_slide{
-    /*color: #fff;*/
-}
 
 ul#options_slide .title{
     color: #fff;
@@ -223,7 +209,7 @@ ul#options_slide .title{
     padding: 10px;
 }
 
-ul.user-cont{|
+ul.user-cont{
     width: 100%;
 }
 
@@ -372,10 +358,6 @@ input[type="checkbox"].filled-in:checked + label:after{
     background-color: #212121;
 }
 
-body{
-    /*background-color: red;*/
-}
-
 table.permission, table.justification{
     border: 1px solid black;
 }
@@ -435,6 +417,101 @@ a.showTeacher{
     widows: 100%;
     height: 50vh;
 }
+ /* Estilos para aceptar permisos de modificación de notas */
+ul.collection.permission-container{border: none;}
+.collection.permission-container .collection-item:last-child{border-bottom: 1px solid #e0e0e0;}
+.permission-container li.collection-item{
+    background: #fafafa;
+    padding: 0px;
+    border-right: 1px solid #e0e0e0;
+    border-left: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.permission-container li.collection-item .header{
+    display: flex;
+    background: black;
+    padding: 10px;
+    color: white;
+}
+.permission-container li.collection-item .header .teacher{width: 80%;}
+.permission-container li.collection-item .header .option{width: 20%;}   
+.permission-container li.collection-item .header .option input[type="checkbox"].checkbox_add + label{color: white;}
+.permission-container li.collection-item .header .option [type="checkbox"] + label::before, [type="checkbox"].checkbox_add:not(.filled-in) + label::after{border: 2px solid white;}
+.permission-container li.collection-item .info-permission{padding: 15px;}
+.permission-container li.collection-item .header .option [type="checkbox"].checkbox_add:checked + label:before {/* Clase que se modifica para cambiar de color los checkbox */
+    border-right: 2px solid white;
+    border-bottom: 2px solid white;
+    border-left: none;
+    border-top: none;
+}
+
+.permission-container li.collection-item .info-permission .gnrl-info{
+    width: 100%;
+    display: flex;
+}
+
+.permission-container li.collection-item  .info-permission div{width: 50%;}
+.permission-container li.collection-item .info-permission .gnrl-info .title{
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.permission-container li.collection-item  .info-permission .subject{
+    display: flex;
+    width: 100%;    
+}
+
+.permission-container li.collection-item .info-permission .gnrl-info, .permission-container li.collection-item  .info-permission .subject{padding: 5px;}
+.permission-container li.collection-item  .info-permission .subject div{width: 50%;}
+.permission-container li.collection-item  .info-permission .subject .info{display: flex;}
+.permission-container li.collection-item .info-permission .subject .info .title{
+    font-weight: bold;
+    margin-right: 5px;
+}
+.permission-container li.collection-item  .info-permission .description{width: 100%;}
+.permission-container li.collection-item  .info-permission .description .title{
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.permission-container li.collection-item  .info-permission .description .result{
+    padding: 10px;
+    border: 1px solid #eee;
+    background: #f5f5f5;
+    text-align: justify;
+    word-wrap: break-word;
+    width: 90%;
+    margin: auto;
+}
+
+.permission-container li.collection-item  .info-permission .option-view{
+    padding: 15px;
+    width: 100%;
+}
+
+#modal_permission .modal-content{padding: 0px;}
+#modal_permission .modal-content .title{
+    color: white;
+    padding: 10px;
+}
+
+#modal_permission .modal-content .info-gnrl{padding: 24px;}
+#modal_permission .modal-content .info-gnrl .list-profiles ul li{list-style: square;}
+
+#modal_permission .modal-content .info-gnrl .list-profiles ul{
+    width: 80%;
+    margin:auto;
+}
+
+#modal_permission .modal-content .info-gnrl .list-students .container-chips{
+    width: 90%;
+    margin: auto;
+}
+
+#modal_permission .modal-content .info-gnrl .list-students .container-chips .chip span.code{font-weight: bold;}
+#modal_permission .modal-content .info-gnrl .list-students .container-chips .chip span.section{font-style: italic;}
+
 
 @media only screen and (max-width: 768px){
     ul#options_slide .title{
@@ -473,11 +550,6 @@ a.showTeacher{
         text-align: center;
         margin: 0;
         margin-bottom: 10px;
-    }
-
-    .result_cont .user_cont .full-name{
-        /*text-align: center;*/
-        /*background: blue;*/
     }
 
     .alert_{
@@ -524,10 +596,6 @@ a.showTeacher{
 
     ul.user-cont div.user-item .info .photo{
         display: none;
-    }
-
-    body{
-        /*background: blue;*/
     }
 
     .infoSubject{
@@ -617,12 +685,20 @@ a.showTeacher{
     }
 
     .chart-container{
-        /*background: green;*/
         height: 40vh;
         width: 100vw;
     }
-}
-
-canvas {
-  /*border: 1px dotted red;*/
+    ul.permission-container li.collection-item .header{display: block;}
+    ul.permission-container li.collection-item .header div{padding: 5px;}
+    ul.permission-container li.collection-item .header .option{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .permission-container li.collection-item .info-permission .gnrl-info, .permission-container li.collection-item  .info-permission .subject{
+        display: block;
+        padding: 0px;
+    }
+    .permission-container li.collection-item .info-permission .gnrl-info div, .permission-container li.collection-item  .info-permission .subject div{padding: 5px;}
 }
