--- a/app/users/files/css/c/style.css
+++ b/app/users/files/css/c/style.css
@@ -423,7 +423,6 @@ a.showTeacher{
     position: relative;
     height: 40vh; 
     width: 40vw;
-    /*background: red;*/
 }
 
 .chart-cont-cont{
@@ -434,6 +433,67 @@ a.showTeacher{
 .card-image img{
     widows: 100%;
     height: 50vh;
+}
+
+.reportTitle{
+    font-size: 25px;
+    font-weight: bold;
+    width: 100%;
+    display: block;
+    text-align: center;
+    color: #d3d3d3;
+}
+
+.uploaded_info{
+    display: flex;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+}
+
+.uploaded_info.c_users{
+    display: block;
+}
+
+.uploaded_info.c_users .content_{
+    display: flex;
+    align-items: center;
+}
+
+.uploaded_info .indicator{
+    display: block;
+    width: 20px;
+    height: 20px;
+}
+
+.uploaded_info .infoTitle{
+    font-weight: bold;
+    font-size: 20px;
+    color: #7f8c8d;
+    width: 50%;
+    text-align: center;
+}
+
+.uploaded_info .infoValue{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    width: 50%;
+}
+
+.uploaded_info .users{
+    width: 100%;
+}
+
+.uploaded_info.done, .uploaded_info.error{justify-content: center;}
+
+.uploaded_info .users .collapsible#uploadCollapsible .collapsible-body{
+    padding: 0px;
+}
+
+#reportCont{
+    display: none;
 }
 
 @media only screen and (max-width: 768px){
@@ -625,8 +685,21 @@ a.showTeacher{
     #getRowsData .input-field.rdo{
         margin-bottom: 3%;
     }
+    
+    .uploaded_info{
+        width: 100%;
+        font-size: 15px;
+    }
 
-    body{
-        /*background: red;*/
+    .uploaded_info .infoTitle{
+        align-items: center;
+        font-size: 12px;
+        /*background: blue;*/
+        width: 70%;
+    }
+
+    .uploaded_info .infoValue{
+        font-size: 20px;
+        width: 30%;
     }
 }
