A looooot of stuff 😅😅😅
- Specialty's CRUD
- Teacher and Coordinator registers
- non-attendance in RECORD and PDF

--- a/app/home/css/style.css
+++ b/app/home/css/style.css
@@ -65,16 +65,16 @@ body{
 }
 
 #logo-container{
-    display: flex;
-    align-items: center;
+    /*display: flex;*/
+    /*align-items: center;*/
 }
 
 #logo-container i{
-    width: 25%;
+    /*width: 25%;*/
 }
 
 #logo-container img{
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
 }
 
