--- a/app/users/files/css/c/style.css
+++ b/app/users/files/css/c/style.css
@@ -560,7 +560,37 @@ a.showTeacher{
     padding: 20px;
 }
 
+#studentCant-modal p{
+    padding-left: 25%;
+    font-size: 20px;
+    margin-bottom: 5%;
+}
+
+
+.row.next-section div{
+    width: 40%;
+    margin-left: 30%;
+    background: #eee;
+    font-weight: bold;
+    padding: 0px;
+    text-align: center;
+}
+
+.row.next-section div .section-identifier{
+    width: 100%;
+    margin-left: 0%;
+    padding: 5px;
+    background: black;
+    color: white;
+}
+
 @media only screen and (max-width: 768px){
+    #studentCant-modal p{
+        padding-left: 20%;
+        font-size: 15px;
+        margin-bottom: 5%;
+    }
+
     ul#options_slide .title{
         text-align: center;
         font-size: 28px;
