--- a/app/users/files/css/view_style.css
+++ b/app/users/files/css/view_style.css
@@ -86,6 +86,28 @@ ul.side-nav.fixed:hover{
 	overflow-y:auto
 }
 
+.mandated-header:first-child{
+    margin-top: 3%;
+}
+
+.mandated-header{
+    width: 100%;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bolder;
+    text-align: center;
+    padding: 10px;
+}
+
+.mandated-body{
+    border: 2px solid #000;
+    margin-bottom: 3%;
+    padding: 20px;
+}
+
+.mandated-body.C{border-color: #000;}
+.mandated-body.T{border-color: #388E3C;}
+
 .bold>a{
 	font-weight:bold
 }
@@ -375,15 +397,19 @@ tfoot td{
         margin-left: 10%;
     }
 
-    .header_info_cont .info{
-        /*background: green;*/
-    }
-
     .header_info_cont .info h3{
         float: right;
         top: 5%;
         left: 50%;
         position: absolute;
+    }
+
+    .header_info_cont .info.S h3{
+    	width: 100%;
+    	float: none;
+        top: 0%;
+        left: 0%;
+        position: relative;
     }
 
     .header_info_cont .info h5{
@@ -407,8 +433,48 @@ tfoot td{
 		margin-bottom: 15%;
 	}
 
-	a.page-title{
-		/*background: blue;*/
-		/*font-size: 15px;*/
+	.record{
+	    width: 100%;
+	    height: 100%;
+	}
+
+	.record .gnrl-info{
+	    margin-top: 50px;
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: space-around;
+	    align-items: center;
+	}
+
+	.record .gnrl-info .photo{
+	    width: 35%;
+		height: 20vh;
+	}
+
+	.record .gnrl-info .data{
+	    padding: 10px;
+	}
+
+	.record .gnrl-info .data div{
+	    font-size: 15px;
+	}
+
+	.record .gnrl-info .data div .title{
+	    font-size: 17px;
+	}
+
+	.record .codes{
+	    padding: 0px;
+	}
+
+	.record .codes .table-title{
+	    padding: 10px;
+	    margin: 0px;
+	    color: #fff;
+	}
+
+	.record .codes table th{
+	    border: 1px solid transparent;
+	    color: #fff;
 	}
 }
