--- a/app/users/files/css/c/style.css
+++ b/app/users/files/css/c/style.css
@@ -233,7 +233,7 @@ ul.user-cont .user-row{
     height: 80px;
 }
 
-ul.user-cont div.user-item{
+ul.user-cont div.user-item, div.user-item{
     width: 50%;
     height: 100%;
     padding: 10px;
@@ -243,7 +243,7 @@ ul.user-cont div.user-item{
 }
 
 
-ul.user-cont div.user-item .info{
+ul.user-cont div.user-item .info, div.user-item .info{
     /*background: blue;*/
     width: 75%;
     height: 100%;
@@ -251,18 +251,18 @@ ul.user-cont div.user-item .info{
     /*justify-content: space-between;*/
 }
 
-ul.user-cont div.user-item .info .photo{
+ul.user-cont div.user-item .info .photo, div.user-item .info .photo{
     width: 20%;
     height: 100%;
 }
 
-ul.user-cont div.user-item .info .photo img{
+ul.user-cont div.user-item .info .photo img, div.user-item .info .photo img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
 
-ul.user-cont div.user-item .info .data{
+ul.user-cont div.user-item .info .data, div.user-item .info .data{
     width: 80%;
     padding-left: 30px;
     display: flex;
@@ -270,17 +270,20 @@ ul.user-cont div.user-item .info .data{
     justify-content: center;
 }
 
-ul.user-cont div.user-item .info .data .id{
+ul.user-cont div.user-item .info .data .id, div.user-item .info .data .id{
     font-size: 20px;
     text-decoration: underline;
     line-height: 20px;
 }
 
-ul.user-cont div.user-item .info .data .name, ul.user-cont div.user-item .info .data .lastName{
+ul.user-cont div.user-item .info .data .name, 
+ul.user-cont div.user-item .info .data .lastName, 
+div.user-item .info .data .name, 
+div.user-item .info .data .lastName{
     font-size: 14px;
 }
 
-ul.user-cont div.user-item .info .data .xtra{
+ul.user-cont div.user-item .info .data .xtra, div.user-item .info .data .xtra{
     font-size: 11px;
     font-style: italic;
     color: #959595;
@@ -426,8 +429,15 @@ a.showTeacher{
 }
 
 .chart-cont-cont{
-    padding-left: 300px;
-    display: none;
+    /*padding-left: 300px;*/
+    /*display: none;*/
+}
+
+#usertChart-cont{
+    /*width: 35vw;*/
+    /*height: 25vh;*/
+    /*background: red;*/
+    position: relative;
 }
 
 .card-image img{
@@ -571,6 +581,40 @@ a.showTeacher{
     display: block;
 }
 
+.row > .chart h5{
+    padding: 10px;
+    /*background-color: red;*/
+    /*margin-left: 10%;*/
+}
+
+#gnrlACC{
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bolder;
+    color: #3498db;
+}
+
+div.user-item .avg{
+    display: flex;
+    justify-content: center;
+    align-content: flex-start;
+    flex-direction: column;
+    text-align: center; 
+    width: 25%;
+}
+
+div.user-item .avg #acc-title{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+div.user-item .avg .avg-data{
+    font-size: 20px;
+    color: #27ae60;
+    font-weight: bolder;
+}
+
 @media only screen and (max-width: 768px){
     #studentCant-modal p{
         padding-left: 20%;
@@ -651,19 +695,19 @@ a.showTeacher{
         width: 100%;
     }
 
-    ul.user-cont div.user-item{
+    ul.user-cont div.user-item, div.user-item{
         width: 100%;
         height: 50%;
     }
 
-    ul.user-cont div.user-item .info .data{
+    ul.user-cont div.user-item .info .data, div.user-item .info .data{
         width: 100%;
         padding-left: 0px;
         display: flex;
         flex-direction: column;
     }
 
-    ul.user-cont div.user-item .info .photo{
+    ul.user-cont div.user-item .info .photo, div.user-item .info .photo{
         display: none;
     }
 
