--- a/app/users/files/css/t/style.css
+++ b/app/users/files/css/t/style.css
@@ -8,13 +8,23 @@
 
 .input-field input[type=text]:focus + label, 
 .input-field input[type=number]:focus + label, 
-.input-field input[type=email]:focus + label{
+.input-field input[type=email]:focus + label,
+{
     color: #4CAF50;
 }
 
 .input-field input[type=text]:focus, 
 .input-field input[type=number]:focus, 
-.input-field input[type=email]:focus {
+.input-field input[type=email]:focus,
+ {
+    border-bottom: 1px solid #4CAF50;
+    box-shadow: 0 1px 0 0 #4CAF50;
+}
+
+textarea.materialize-textarea:focus:not([readonly])+ label{
+    color: #4CAF50;
+}
+textarea.materialize-textarea:focus:not([readonly]) {
     border-bottom: 1px solid #4CAF50;
     box-shadow: 0 1px 0 0 #4CAF50;
 }
@@ -23,6 +33,11 @@
 .input-field input[type="number"]:focus + label, 
 .input-field input[type="email"]:focus + label{
     color: #4CAF50;
+}
+
+[type="checkbox"]:checked + label::before{
+    border-right: 2px solid #4CAF50;
+    border-bottom: 2px solid #4CAF50;
 }
 
 /*Ezic 1.8*/
